<resources>
    <string name="app_name">Horoscopo</string>
    <string name="titulo">LOGIN</string>
    <string name="login">Ingresar</string>
    <string name="fecha">Fecha de nacimiento</string>
    <string name="signo">Signo Zodiacal</string>
    <string name="acuario">acuario</string>
    <string name="piscis">piscis</string>
    <string name="aries">aries</string>
    <string name="tauro">tauro</string>
    <string name="geminis">geminis</string>
    <string name="cancer">cancer</string>
    <string name="leo">leo</string>
    <string name="virgo">virgo</string>
    <string name="libra">libra</string>
    <string name="escorpio">escorpion</string>
    <string name="sagitario">sagitario</string>
    <string name="capricornio">capricornio</string>
    <string name="dia">Día</string>
    <string name="meszo">Mes</string>
    <string name="aceptar">Aceptar</string>
    <string-array name="combo_dias">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="combo_mes">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
</resources>
